Fixes pager list bullets, which are still visible in Firefox/IceWeasel
 modified:   css/slidethis-theme.css

--- a/css/slidethis-theme.css
+++ b/css/slidethis-theme.css
@@ -20,6 +20,7 @@
 }
 #pager li {
   float: left;
+  list-style: none;
   margin: 0 2px;
 }
 #pager li span {
